--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-"" 
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>Поздравительная открытка</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/_hiG5vI8x2Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</body>
+
+</html>
